[package]
authors = ["Sergei Zharinov <s@jrnv.me>"]
edition = "2021"
name    = "dir-glob-scan"
version = "1.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
gix-config  = "0.22.0"
globset     = "0.4.10"
ignore      = "0.4.20"
napi        = "=2.12.7"
napi-derive = "=2.12.5"

[build-dependencies]
napi-build = "=2.0.1"

[profile.release]
lto = true
