[package]
authors = ["Sergei Zharinov <s@jrnv.me>"]
edition = "2021"
name    = "dir-glob-scan"
version = "1.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
gix-config  = "0.31.0"
globset     = "0.4.13"
ignore      = "0.4.20"
napi        = "2.16.4"
napi-derive = "2.13.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
